--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1> Odin recipes</h1>
-        
+        <a href="./recipes/burger.html" target="_blank">Burger</a>
 
     </body>
 
